Changed some categories / url to the .shed file, but does not really acts on remote tool sheds.... Anyway, the tool is now in the test tool shed.

--- a/fetch_fasta_from_ncbi/.shed.yml
+++ b/fetch_fasta_from_ncbi/.shed.yml
@@ -6,5 +6,6 @@ long_description: |
   Fetch fasta sequences from NCBI using eutils wrappers
 categories:
   - Fasta Manipulation
+  - Data Source
 homepage_url: http://drosophile.org/
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
