--- a/tools/msp_fasta_tabular_converter/.shed.yml
+++ b/tools/msp_fasta_tabular_converter/.shed.yml
@@ -12,3 +12,5 @@ categories:
 homepage_url: http://drosophile.org/
 
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
