--- a/packages/package_biocbasics/.shed.yml
+++ b/packages/package_biocbasics/.shed.yml
@@ -9,3 +9,5 @@ categories:
 homepage_url: http://www.bioconductor.org/
 remote_repository_url: http://drosophile.org
 type: tool_dependency_definition
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
