Remove perl installation form requirements, appears to not be necessary. Remove vdb-config commands, need to be set before using tools that use sra-toolit functionality.

--- a/packages/package_ncbi_vdb_2_5_2/.shed.yml
+++ b/packages/package_ncbi_vdb_2_5_2/.shed.yml
@@ -8,3 +8,5 @@ categories:
   - Tool Dependency Packages
 homepage_url: 
 remote_repository_url: 
+toolshed:
+  - https://lbcd41.snv.jussieu.fr/toolshed/
