--- a/tools/msp_fasta_tabular_converter/.shed.yml
+++ b/tools/msp_fasta_tabular_converter/.shed.yml
@@ -9,8 +9,7 @@ categories:
   - Convert Formats
   - Fasta Manipulation
 
-homepage_url: http://drosophile.org/
-
+homepage_url: http://artbio.fr
 remote_repository_url: https://bitbucket.org/drosofff/gedtools/
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
