--- a/tools/fetch_fasta_from_ncbi/.shed.yml
+++ b/tools/fetch_fasta_from_ncbi/.shed.yml
@@ -8,7 +8,7 @@ categories:
   - Fasta Manipulation
   - Data Source
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/fetch_fasta_from_ncbi
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
