--- a/tools/msp_fasta_tabular_converter/.shed.yml
+++ b/tools/msp_fasta_tabular_converter/.shed.yml
@@ -10,7 +10,7 @@ categories:
   - Fasta Manipulation
 
 homepage_url: http://artbio.fr
-remote_repository_url: https://bitbucket.org/drosofff/gedtools/
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/msp_fasta_tabular_converter
 toolshed:
   - https://lbcd41.snv.jussieu.fr/toolshed/
   - testtoolshed
