--- a/tools/small_rna_map/.shed.yml
+++ b/tools/small_rna_map/.shed.yml
@@ -1,9 +1,11 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
 name: small_rna_map
-description: generate tabular file from BAM file
+description: Generate read count maps from alignment BAM files
 long_description: |
-  Take on BAM file as input and produce a tabular file 
+  Generate read count maps from alignment BAM files, using pysam and ggplot.
+  In addition to the read counts (bars), median size and mean size of reads mapping at a any given position
+  are plotted in the graphs. Takes  BAM files as inputs and produce a pdf output  
 
 categories:
   - RNA
