--- a/tools/small_rna_map/.shed.yml
+++ b/tools/small_rna_map/.shed.yml
@@ -3,9 +3,10 @@ owner: artbio
 name: small_rna_map
 description: Generate read count maps from alignment BAM files
 long_description: |
-  Generate read count maps from alignment BAM files, using pysam and ggplot.
-  In addition to the read counts (bars), median size and mean size of reads mapping at a any given position
-  are plotted in the graphs. Takes  BAM files as inputs and produce a pdf output  
+  Generate read count maps from alignment BAM files, using pysam and r-lattice.
+  In addition to the read counts (bars), median size, mean size and coverage of
+  reads mapping at a any given position are plotted in the graphs.
+  Takes sorted BAM files as inputs and produce pdf output  
 
 categories:
   - RNA
