Modified faulty yml

--- a/tools/blast_unmatched/.shed.yml
+++ b/tools/blast_unmatched/.shed.yml
@@ -9,6 +9,4 @@ categories:
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/blast_unmatched
 toolshed:
-  - https://lbcd41.snv.jussieu.fr/toolshed/
-  - testtoolshed
-#  - toolshed
+  - toolshed
