--- a/tools/blast_to_scaffold/.shed.yml
+++ b/tools/blast_to_scaffold/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
+owner: artbio
 name: blast_to_scaffold
 description: Generate DNA scaffold from blastn or tblastx alignments of Contigs
 long_description: |
@@ -16,6 +16,4 @@ categories:
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/blast_to_scaffold
 toolshed:
-  - https://lbcd41.snv.jussieu.fr/toolshed/
-  - testtoolshed
   - toolshed
