lint and switch to python 3, bump to 1.0.0 and change owner to artbio

--- a/tools/cherry_pick_fasta/.shed.yml
+++ b/tools/cherry_pick_fasta/.shed.yml
@@ -1,5 +1,5 @@
 # .shed.yml supporting automatic pushes.
-owner: drosofff
+owner: artbio
 name: cherry_pick_fasta
 description: Pick fasta sequence with specific header content
 long_description: |
