--- a/tools/get_reference_fasta/.shed.yml
+++ b/tools/get_reference_fasta/.shed.yml
@@ -12,5 +12,5 @@ categories:
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/get_reference_fasta
 toolshed:
-  - https://lbcd41.snv.jussieu.fr/toolshed/
+  - toolshed
   - testtoolshed
